# rummikub_solver

./: .gitignore  Cargo.toml  LICENSE
src/: common.rs  lib.rs  piece.rs  solve_tile.rs  sort_set.rs  validate.rs
