[package]
name = "rummikub_solver"
description = "Solves a board of Rummikub game by attempting to fit every piece given into a valid game set."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ilyail3/rummikub_solver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
